2025-11-09T01:00:54Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19201088345 # 803
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-09
* notice: last 14d: unq all: 4 4
* notice: prev accum: outdated-unq outdated-all / unq all: 407 581 / 412 586
* notice: next accum: outdated-unq outdated-all / unq all: 408 582 / 412 586
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-10-25] / []

2025-11-07T00:57:58Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19154693657 # 801
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-07
* notice: last 14d: unq all: 5 5
* notice: prev accum: outdated-unq outdated-all / unq all: 406 580 / 412 586
* notice: next accum: outdated-unq outdated-all / unq all: 407 581 / 412 586
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-10-23] / []

2025-11-06T00:58:09Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19121244951 # 800
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-06
* notice: last 14d: unq all: 6 6
* notice: prev accum: outdated-unq outdated-all / unq all: 404 578 / 406 580
* notice: next accum: outdated-unq outdated-all / unq all: 406 580 / 412 586
* notice: prev exec diff / last date diff / accum: unq all: +6 +6 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-10-11 2025-10-15] / [2025-10-23 2025-10-25 2025-10-26 2025-10-28 2025-10-30 2025-11-02]

2025-10-16T01:00:01Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/18546965961 # 798