@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-11-09T01:00:54Z",
-  "count_outdated" : 582,
-  "uniques_outdated" : 408,
-  "count" : 586,
-  "uniques" : 412,
+  "timestamp" : "2025-11-10T01:00:58Z",
+  "count_outdated" : 583,
+  "uniques_outdated" : 409,
+  "count" : 587,
+  "uniques" : 413,
   "clones" : [
-    {
-      "timestamp": "2025-10-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-10-28T00:00:00Z",
       "count": 1,
@@ -34,6 +25,15 @@
     },
     {
       "timestamp": "2025-11-02T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-11-09T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
