@@ -3,11 +3,6 @@
   "uniques": 4,
   "clones": [
     {
-      "timestamp": "2025-10-26T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-10-28T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -19,6 +14,11 @@
     },
     {
       "timestamp": "2025-11-02T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-11-09T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
